Update Some Image Folder

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="about-img">
                     <div class="img-box">
                         <div class="shape02"></div>
-                        <img src="/Image_project/About_Us.png" alt="About Us">
+                        <img src="Image_project/About_Us.png" alt="About Us">
                     </div>
                 </div>
             </div>
