--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/jquery-ui-1.13.2/jquery-ui.structure.css">
     <link rel="stylesheet" href="/jquery-ui-1.13.2/jquery-ui.theme.css"> -->
     <link rel="stylesheet" href="codingMafia.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <!-- PreLoader -->
